# pythonLearning

./: .gitignore  Makefile  pyproject.toml
grokking_algorythms/chapter1/: binary_search.py
grokking_algorythms/chapter2/: selection_sort.py
grokking_algorythms/chapter3/: factorial.py
grokking_algorythms/chapter4/: quick_sort.py  tasks.py
lection1/: riddles.py
lection2/: containers.py  list_task.py  list_task_2.py  matrix.py  remainder.py  sortArray.py  tuples.py
practical_introduction_book/chapter1/: ex1.py  ex2.py  ex3.py  ex4.py  ex5.py  ex6.py  ex7.py  ex8.py  ex9.py
practical_introduction_book/chapter2/: ex1.py  ex10.py  ex11.py  ex12.py  ex13.py  ex14.py  ex2.py  ex3.py  ex4.py  ex5.py  ex6.py  ex7.py  ex8.py  ex9.py
practical_introduction_book/chapter3/: ex1.py  ex10.py  ex11.py  ex12.py  ex13.py  ex14.py  ex15.py  ex2.py  ex3.py  ex4.py  ex5.py  ex6.py  ex7.py  ex8.py  ex9.py
practical_introduction_book/chapter4/: ex1.py  ex2.py  ex3.py  ex4.py
practical_introduction_book/chapter5/: ex1.py  ex2.py  ex3.py  ex4.py
practical_introduction_book/chapter6/: ex1.py  ex2.py  ex3.py  ex4.py  ex5.py  ex6.py
practical_introduction_book/chapter7/: ex1.py  ex2.py  ex3.py  ex4.py
practical_introduction_book/chapter8/: ex1.py  ex2.py  ex3.py
tceh/lection1/: riddles.py
tceh/lection2/: containers.py  dict.py  list_task.py  list_task_2.py  list_task_3.py  list_task_4.py  matrix.py  remainder.py  sortArray.py  string_task.py
tceh/lection3/: args_kwargs.py  enclosing.py  examples.py  fp.py  functions_are_objects.py  task1.py  task2.py  task3.py  task4.py  (+3 more)
(+41 files in other folders)
