[tool.poetry]
name = "python_learning"
version = "0.0.0"
description = "tceh learning"
authors = ["vkhalaim <vasyl.khalaim@ukr.net>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^5.4.3"

packages = [
    { include = "tceh.lection3" },
  ]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

